# schizoid

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  flake.nix
crates/client/: Cargo.toml
crates/client/src/: input.rs  main.rs  rendering.rs
crates/server/: Cargo.toml
crates/server/src/: game.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: components.rs  enemies.rs  lib.rs  protocol.rs  systems.rs
crates/test_harness/: Cargo.toml
crates/test_harness/src/: sim.rs
crates/test_harness/tests/: collision.rs  enemies.rs  movement.rs
docs/plans/: 2026-02-22-game-design.md  2026-02-22-implementation-plan.md
