[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/client",
    "crates/server",
    "crates/test_harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
bevy = "0.18"
lightyear = { version = "0.26", features = [
    "replication",
    "prediction",
    "interpolation",
    "input_native",
] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
rand = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
