[package]
name = "schizoid-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_post_process = "0.18"
lightyear = { workspace = true, features = ["client", "netcode", "udp"] }
schizoid-shared = { path = "../shared" }
clap = { workspace = true }
rand = { workspace = true }
